--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/soundmanager2-nodebug-jsmin.js"></script>
+  <script src="js/instruments.js"></script>
   <script src="js/app.js"></script>
 
 </body>
